fixed oval button issues on tablet

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ h1{
     margin: 0 auto;
     border-radius: 100%;
     height: 40px;
-    width: 40px;
+    aspect-ratio: auto 1/1;
     font-size: 1.3em;
     text-align: center;
     color: #0091E7;
@@ -414,7 +414,7 @@ input::-webkit-inner-spin-button {
     background-color: #fff;
     padding: 3vh;
     border-radius: 10px;
-    width: 30vw;
+    width: 50vw;
     margin: 0 auto;
     
     position: relative;
